# AI-Podcast

./: README.md  main.py  podcast_output.txt  pyproject.toml  requirements.txt
.github/workflows/: podcast.yml
src/: news.py  news_clients.json  news_fetch.py  podcast_generator.py  script_generator.py  text_to_speech.py  thumbnail_generator.py  tts.py  uploader.py  utils.py
